@@ -1124,7 +1124,11 @@ std::unique_ptr<CDMSession> MediaPlayerPrivateAVFoundationCF::createSession(cons
     if (!keySystemIsSupported(keySystem))
         return nullptr;
 
+#if HAVE(AVFOUNDATION_LOADER_DELEGATE)
     return std::make_unique<CDMSessionAVFoundationCF>(this);
+#else
+    return nullptr;
+#endif
 }
 #endif
 
